fix: removing horizontal scroll bar

--- a/css/universal.css
+++ b/css/universal.css
@@ -7,4 +7,8 @@
 html {
   font-size: 62.5%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  scroll-behavior: smooth;
+}
+body {
+  overflow-x: hidden;
 }
